added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,15 @@ services:
 before_install:
    - docker build -t docker-react -f Dockerfile.dev .
 script:
-  - docker run -e CI=true docker-react npm run test
+   - docker run -e CI=true docker-react npm run test
+deploy:
+   provider: elasticbeanstalk
+   region: "us-east-2"
+   app: "Docker-react"
+   env: "DockerReact-env"
+   bucket_name: "elasticbeanstalk-us-east-2-935985392318"
+   bucket_path: "Docker-react"
+   on:
+      branch: master
+   access_key_id: $AWS_ACCESS_KEY
+   secret_access_key: $AWS_SECRET_KEY
